# my_script

./: .gitignore  .log.swp  Ag.traj  B-H.csv  CaH6.vasp  FormationEnthathyPerBlock.py  POSCAR  POSCAR-init  PPOSCAR  README.md  README_SearchStructures.md  StructureConvert.py  TestVaspProcess.py  VaspOpt.py  VaspOutcar.py  VaspPhono.py  VaspProcess.py  __init__py  ana.py  analysis_symmetry.py  ase_vasp_calculator.py  cak3.py  calculate-LuNH-ratio  calculate_EOS.py  change_for_phy_mayuan.sh  change_head.sh  data_processer.py  debug.ipynb  dir2cart.f90  distancematrix.py  encut_test.py  enumeration.py  estimate_vol.py  get_cluster.py  jiaoben.sh  kspacing_test.py  movename.sh  my_scriptrc.py  orderofmyscript.md  orderofpbs.md  (+35 more)
ACNN-toolkit/: README.md  order  scheduling.sh
AIMD-scripts/: vasp_aimd.md
ELK-toolkit/: README.md  cal_eos_ASE.py  elk.in  test_elk_gmaxvr.py  test_elk_lmaxapw.py  test_elk_lradstp.py  test_elk_pp.py  test_qe_pp.py  test_vasp_pp.py  tet_elk_ngridk.py
EPW-toolkit/: MergeTmp.py  README.md  epw_main.py  pp.py
acnn-scripts/: README.md
ares-phonon-scripts/: INCAR  INCAR_scf  aresphonplot  aresphonprepare  phon.in  vasp.sh
ares-phonon-toolkit/: INCAR  aresphonprepare  phon  vasp_substep.sh
bader-toolkit/: analybader.py
calypso-inputfiles/: 1handle.sh  INCAR_1  INCAR_2  README.md  autosplit_savesteps.py  caly.slurm  log  write_vsave.py
calypso-scripts/: README.md  autosplit.py  generate_ConstantRatio_inputdat_forACNN.py  generate_fixed_inputdat.py
calypso-toolkit/: INCAR_3  INCAR_4  README.md  autosplit.py  autosplit_savesteps  cak.t.py  cak3.py  distancematrix.py  generate_ConstantRatio_inputdat_forDEEPMD.py
deepMD-scripts/: README.md  extract_info.py
deepkit-dpgen-scripts/: collect_OUTCAR.sh  deepkit.md  dpgen.md  machine_模板2.json  param.json  paramjson解读.md
deepkit-dpgen-toolkit/: check_failed_FP.sh  check_failed_succeeded_none.sh  check_model_devi.sh  check_task.py  convertVasp2DpRaw.py  deepkit.md  dpgen.md  extract_info.py  get_datasize.py  input.json  machine_模板1.json  merge_model_devi.py  order_fordptest  param.json  plot_ModelDevi.py  plot_corelation.py  plot_lcurve.py  plotrelation.py  prepare_testdataset.sh  retry_model_devi.sh
dftbantch-scripts/: et.sh  kspacing.ini
dftbantch-toolkit/: ecutjobs.ini
elk-toolkit/: REMADEofEOS.md  calculate_EOS.py  celkscf.py  test_elk_ngridk.py  test_elk_pp.py  test_elk_rgkmax.py  test_qe_pp.py
epw/: README.md  config.py  epw_base.py  epw_inputpara.py  epw_logging.py  epw_logo.py  epw_main.py  epw_run.py  epw_submitjob.py  epw_writeinput.py  epw_writesubmit.py  epwbin.py  set_args.py
epw-toolkit/: MergeTmp.py  README.md  qe_band.py
hydride-datasets/: convert-encode-method.py  plot_periodic_table.ipynb  plot_structs_enthalpy.ipynb  plot_year_Tc.ipynb
lammps-toolkit/: AssembleSuperCell.py  README.md  getLocalEntropy_ovito.py  getRDFovito.py  plotEngergyVSTime_for_lammps.py  plotRDFovito.py  sortAtomsOrder4traj.py  write_lammpsdata.py
learn_to_use_mendeleev/: advanced_visualizations.ipynb  bulk_data_access.ipynb  electronic_configuration.ipynb  quick_start.ipynb
lobster-toolkit/: analycohp.py  get_cohpfile_bydistance.py  get_cohpfile_bypairs.py
magus-scripts/: README.md
magus-toolkit/: MLP_predict_cfg_and_plotDFTvsML.py  README.md  check_cfg.py  check_epoch_relaxcfg.sh  check_optPoptraj.py  check_traj.py  convert_optOUTCAR2traincfg.py  convert_scfOUTCAR2traincfg.py  countCFG.sh  deleteOverlappingStructs.py  filter_formulas.py  make_traj_file.py  merge_traj.py  process_cfg.py  process_traj.py  (+1 more)
(+2294 files in other folders)
