[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my_scripts"
version = "2.0.0"
description = "计算QE/VASP/EPW和结构生成的工具包"
authors = [
    {name = "madegan", email = "myth620137018@163.com"}
]
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10"
]

# 主依赖（对应原requirements.txt）
dependencies = [
    "pymatgen>=2022.9.21",
    "ase>=3.22.1",
    "matplotlib",
    "f90wrap",
    "Cython",
    "scikit-learn",
    "pyfiglet==1.0.2",
    "spglib==2.5.0",
    "phonopy>=2.28.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "mypy>=1.0"
]

[project.scripts]
qe_main = "qe.qe_main:main"
vasp_main = "vasp.vasp_main:main"
generator_main = "structuregenerator.generator_main:main"

[project.urls]
Homepage = "https://gitee.com/mayuan_JLUPHY/my_script"
Documentation = "https://your-docs-url"

# 工具配置示例
[tool.black]
line-length = 88
target-version = ["py37", "py38", "py39", "py310"]

[tool.ruff]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
line-length = 100

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-v --cov=."
testpaths = ["tests"]