[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my_script"
version = "2.0.0"
description = "计算QE/VASP/EPW和结构生成的工具包"
authors = [
    {name = "madegan", email = "myth620137018@163.com"}
]
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10"
]

# 主依赖（对应原requirements.txt）
dependencies = [
    "pymatgen>=2022.9.21",
    "ase>=3.22.1",
    "matplotlib",
    "f90wrap",
    "Cython",
    "scikit-learn",
    "pyfiglet==1.0.2",
    "spglib==2.5.0",
#    "phonopy>=2.28.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "mypy>=1.0"
]

# useless method to specify my scripts
# [project.scripts]
# qe_main = "qe:qe_main.py"
# vasp_main = "vasp:vasp_main.py"
# generator_main = "structuregenerator:generator_main.py"
# epw_main = "epw:epw_main.py"

[tool.setuptools]
packages = ["qe", "vasp", "epw", "structuregenerator"]  # 这里的目的是为了将列表中的内容写到my_script.egg-info/top_level.txt中, 方便执行script-files中的脚本是可以调用相应自定义的库和包
script-files = ["qe/qe_main.py", "vasp/vasp_main.py", "epw/epw_main.py", "structuregenerator/generator_main.py"]  

[project.urls]
Homepage = "https://gitee.com/mayuan_JLUPHY/my_script"
Documentation = "https://your-docs-url"

# 工具配置示例
[tool.black]
line-length = 88
target-version = ["py37", "py38", "py39", "py310"]

[tool.ruff]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
line-length = 100

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-v --cov=."
testpaths = ["tests"]
